로그인 처리, 신고 닉네임 이름 추가 /수정